ru.job4j.collection.DepartmentsTest